webregi-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: webregi-v2-service
spec:
  type: LoadBalancer
  ports:
    - protocol: TCP
      port: 80
      targetPort: 8000
  selector:
    app: webregi-v2-app
