webregi-ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: webregi-ingress
spec:
  defaultBackend:
    service:
      name: webregi-v2-service
      port:
        number: 8000
